--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <script type="module" src="./src/index.js"></script>
+        <script type="module" src="./src/index.js" defer></script>
     </head>
-
+ 
     <body>
     
     </body>
